Add skeleton XLSX to Parquet conversion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+calamine = "0.26.1"
+polars = { version = "0.46.0", features = ["parquet", "lazy"] }
+anyhow = "1.0"
+clap = { version = "4.5.32", features = ["derive"] }
