Add DuckDB dependency and installation guide

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ calamine = "0.26.1"
 polars = { version = "0.46.0", features = ["parquet", "lazy"] }
 anyhow = "1.0"
 clap = { version = "4.5.32", features = ["derive"] }
+duckdb = { version = "1.2.1", features = ["bundled"] }
